06 March 2007

* Submatches with commands are now added as tags command0 to command9.
* pipe actions now use the command.c framework, which means their stderr is
  logged and stdout discarded.
* mail_file tag added by maildir delivery and mbox_file by mbox. Also pass the
  tags block up and down between parent and child so these tags actually stick.
* A new exec action, similar to pipe but stdin is /dev/null. This is useful
  in combination with the mail_file and mbox_file tags.

04 March 2007

* Bug fix: fill in the correct size for maildir fetched mail rather than using
  the rounded-up size and adding a ton of nulls.
* -D on the command line overrides macro definitions in the configuration file.
* Build the attachment list when the first attachment match rule is found rather
  than for every mail regardless.
* Add a message_id tag to each mail.

03 March 2007

* add-header action and lines, body_lines, header_lines tags for IMAP/POP3,
  suggested by Frank Terbeck.
* Linux dirname(3)/basename(3) screws up the buffer. Fixed it thanks to Frank
  Terbeck.
* Fixed bugs in string parsing thanks to Frank Terbeck.

02 March 2007

* Made add_tag use varargs and added a server_uid tag to POP3/IMAP messages.
* Added infrastructure to maintain a cache of variable-length strings within a
  single contiguous block of data (strb.c), so it can be passed easily up
  to the parent process. Use this for storing mail tags to get rid of the
  arbitrary tag length limits.

28 February 2007

* Man page cleanups, from Tamas TEVESZ.

27 February 2007

* fdm 1.0 released.

22 February 2007

* Fixed silly typo in NNTP code check. SF bug 1650701.
* Included account name in received header.
* Added stdout delivery.
* New append-string delivery to add data to a mail.

19 February 2007

* Added a remove-header action to remove all instances of a header. Based on a
  a request by Tobias Ulmer.

09 February 2007

* Reworked the substitution stuff. Each mail now carries a list of tag name,