@@ -1,3 +1,8 @@
+07 March 2007
+
+* Handle POLLHUP properly in io.c: if it is set and POLLIN isn't set, the 
+  fd has closed. This makes stdin delivery work properly on Linux 2.4.
+
 06 March 2007
 
 * Submatches with commands are now added as tags command0 to command9.
@@ -100,4 +105,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.30 2007-03-07 00:27:56 nicm Exp $
+$Id: CHANGES,v 1.31 2007-03-07 19:07:42 nicm Exp $
